--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                     </div>
                     <br>
                     <div class="row" style="justify-content: flex-end;">
-                        <div class="recaptcha"></div>
+                        <div id="recaptcha"></div>
                     </div>
                     <br/>
                     <div style="width: 100%; display: flex; justify-content: flex-end;">
