--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="footer">
-        Guido Sangiovanni - P.IVA 01718390196
+        Guido Sangiovanni - Via A. De Gasperi, 22 26010 Bagnolo Cremasco (CR) P.IVA 01718390196 C.F. SNGGDU90T21D142S
     </div>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
