--- a/public/index.html
+++ b/public/index.html
@@ -5,129 +5,98 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Guido Sangiovanni</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script type="text/javascript">
-        var onloadCallback = function() {
-          grecaptcha.render('recaptcha', {
-            'sitekey' : '6Le39NIUAAAAAKEvhEn0hGf44mBq_El4q-9xAsqk'
-          });
-        };
-      </script>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
 </head>
 <body>
-    <div class="header"></div>
+<div class="header"></div>
+<br>
+<div class="container">
+    <div class="slide-from-right-container">
+        <div class="slide-from-right">
+            <h2>
+                CIAO!
+            </h2>
+            sono Guido Sangiovanni, uno sviluppatore Web.
+        </div>
+    </div>
     <br>
-    <div class="container">
-        <div class="slide-from-right-container">
-            <div class="slide-from-right">
-                <h2>
-                    CIAO!
-                </h2>
-                sono Guido Sangiovanni, uno sviluppatore Web.
-            </div>
+    <div class="slide-from-left-container">
+        <div class="slide-from-left">
+            <h2>
+                Di cosa mi occupo?
+            </h2>
+            lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
+            Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalla PMI industriale alla multinazionale della moda.
         </div>
-        <br>
-        <div class="slide-from-left-container">
-            <div class="slide-from-left">
-                <h2>
-                    Di cosa mi occupo?
-                </h2>
-                lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
-                Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalla PMI industriale alla multinazionale della moda.
-            </div>
-        </div>
-        <hr>
-        <br>
-        <div class="popup-container">
-            <div class="popup">
-                <h2>
-                    Come lavoro?
-                </h2>
-                Il mio lavoro solitamente si svolge in cicli di tre fasi:<br>
-                <br>
-                <div style="text-align: left;">
-                    <strong>Analisi</strong><br>
-                    Durante questa fase mi reco presso il cliente e, parlando con gli addetti ed analizzando documenti o software esistenti, redigo un documento nel quale indico quale lavoro dovrà essere svolto, allegando una stima di costo per il cliente.<br><br>
-                    <strong>Sviluppo</strong><br>
-                    Questa è la fase in cui mi occupo di preparare il vostro Software, utilizzando le tecnologie più adatte a soddisfare le reali esigente.<br><br>
-                    <strong>Test e Rilascio</strong><br>
-                    L'ultima e forse la più importante fase è quella del Testing, un'operazione che richiede uno sforzo congiunto da parte mia e del cliente, in questo modo verifichiamo che il lavoro sia corretto e completo.<br><br>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <br>
-        <div class="popup-container">
-            <div class="popup">
-                <h2>
-                    In cosa credo?
-                </h2>
-                <strong>Lavorare bene</strong><br>
-                Un Software su misura sulle tue esigenze ti permette di essere più produttivo, di risparmiare e di guadagnare di più, ma soprattutto di dare più valore al tuo tempo.<br><br>
-                <strong>Formazione</strong><br>
-                Ogni progetto ha delle esigenze specifiche, per questo motivo dedico una parte importante del mio tempo a tenermi aggiornato sugli strumenti e le tecnologie migliori.<br><br>
-                <strong>Condivisione</strong><br>
-                Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per ottenere un mondo migliore, per tutti. Per questo motivo, insieme ad alcuni ex colleghi ed amici ho contribuito a fondare la Community si Sviluppatori "CremaWeb".<br><br>
-                </div>
-            </div>
-        </div>
+    </div>
+    <hr>
+    <br>
+    <div class="popup-container">
         <div class="popup">
             <h2>
-                Contattami
+                Come lavoro?
             </h2>
-            <form method="post" enctype="text/plain">
-                <div class="contact">
-                    <div class="row">
-                        <strong style="flex-grow: 2;">Nome</strong style="flex-grow: 2;">
-                        <input style="flex-grow: 5;" type="text" name="nome"/>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <strong style="flex-grow: 2;">Email</strong>
-                        <input style="flex-grow: 5;" type="email" name="email"/>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <strong style="flex-grow: 2;">Messaggio</strong>
-                        <textarea style="flex-grow: 5;" name="messaggio"></textarea>
-                    </div>
-                    <br>
-                    <div class="row" style="justify-content: flex-end;">
-                        <div id="recaptcha"></div>
-                    </div>
-                    <br/>
-                    <div style="width: 100%; display: flex; justify-content: flex-end;">
-                        <input type="submit" id="submit" value="Scrivimi!">
-                    </div>
-                </div>
-            </form>
-            <br><br>
+            Il mio lavoro solitamente si svolge in cicli di tre fasi:<br>
+            <br>
+            <div style="text-align: left;">
+                <strong>Analisi</strong><br>
+                Durante questa fase mi reco presso il cliente e, parlando con gli addetti ed analizzando documenti o software esistenti, redigo un documento nel quale indico quale lavoro dovrà essere svolto, allegando una stima di costo per il cliente.<br><br>
+                <strong>Sviluppo</strong><br>
+                Questa è la fase in cui mi occupo di preparare il vostro Software, utilizzando le tecnologie più adatte a soddisfare le reali esigente.<br><br>
+                <strong>Test e Rilascio</strong><br>
+                L'ultima e forse la più importante fase è quella del Testing, un'operazione che richiede uno sforzo congiunto da parte mia e del cliente, in questo modo verifichiamo che il lavoro sia corretto e completo.<br><br>
+            </div>
         </div>
     </div>
-    <div class="footer">
-        Guido Sangiovanni - Via A. De Gasperi, 22 26010 Bagnolo Cremasco (CR) P.IVA 01718390196 C.F. SNGGDU90T21D142S
+    <hr>
+    <br>
+    <div class="popup-container">
+        <div class="popup">
+            <h2>
+                In cosa credo?
+            </h2>
+            <strong>Lavorare bene</strong><br>
+            Un Software su misura sulle tue esigenze ti permette di essere più produttivo, di risparmiare e di guadagnare di più, ma soprattutto di dare più valore al tuo tempo.<br><br>
+            <strong>Formazione</strong><br>
+            Ogni progetto ha delle esigenze specifiche, per questo motivo dedico una parte importante del mio tempo a tenermi aggiornato sugli strumenti e le tecnologie migliori.<br><br>
+            <strong>Condivisione</strong><br>
+            Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per ottenere un mondo migliore, per tutti. Per questo motivo, insieme ad alcuni ex colleghi ed amici ho contribuito a fondare la Community si Sviluppatori "CremaWeb".<br><br>
+        </div>
     </div>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script type="text/javascript">
-        $(document).ready(function() {
-            $('#submit').click(function(event) {
-                event.preventDefault();
-                const data = {
-                    nome: $('[name="nome"]').val(),
-                    email: $('[name="email"]').val(),
-                    messaggio: $('[name="messaggio"]').val(),
-                    grecaptcha: grecaptcha.getResponse()
-                }
-                $.post({
-                    url: '/contact',
-                    data: data,
-                    success: function (response) {
-                        console.log('ok')
-                    }
-                });
-            });
-        });
-    </script>
+</div>
+<div class="popup">
+    <h2>
+        Contattami
+    </h2>
+    <div class="contact">
+        <div class="row">
+            <strong style="flex-grow: 2;">Nome</strong style="flex-grow: 2;">
+            <input style="flex-grow: 5;" type="text" name="nome" value="guido"/>
+        </div>
+        <br>
+        <div class="row">
+            <strong style="flex-grow: 2;">Email</strong>
+            <input style="flex-grow: 5;" type="email" name="email" value="sangiovanni.guido@gmail.com" />
+        </div>
+        <br>
+        <div class="row">
+            <strong style="flex-grow: 2;">Messaggio</strong>
+            <textarea style="flex-grow: 5;" name="messaggio">msg</textarea>
+        </div>
+        <br>
+        <div class="g-recaptcha" name="g-recaptcha-response" data-sitekey="6Le39NIUAAAAAKEvhEn0hGf44mBq_El4q-9xAsqk"></div>
+        <br>
+        <div style="width: 100%; display: flex; justify-content: flex-end;">
+            <div id="submit">Scrivimi!</div>
+        </div>
+    </div>
+    <br><br>
+</div>
+</div>
+<div class="footer">
+    Guido Sangiovanni - P.IVA 01718390196
+</div>
 </body>
 <style>
 
@@ -170,7 +139,7 @@
     }
 
     /* CLASSES */
-    
+
     .slide-from-right-container {
         text-align: left;
         position: relative;
@@ -206,7 +175,7 @@
         animation-delay: 1.2s;
         text-align: center;
     }
-    
+
     .header {
         width: 100vw;
         height: 60vh;
@@ -292,4 +261,35 @@
         100% { opacity: 1;}
     }
 </style>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#submit').click(function(e) {
+            debugger;
+            var nome = $('[name="nome"]').val();
+            var email = $('[name="email"]').val();
+            var messaggio = $('[name="messaggio"]').val();
+
+            $.post({
+                url: 'https://https://php-guidosangiovanni-mailer.herokuapp.com/',
+                contentType: 'application/json',
+                dataType: 'json',
+                data: {
+                    email: email,
+                    nome: nome,
+                    messaggio: messaggio,
+                    'g-recaptcha-response': $('[name="g-recaptcha-response"]').val()
+
+                },
+                success: function(response) {
+                    debugger;
+                }
+            })
+        });
+    });
+</script>
 </html>
