--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,9 @@
             <textarea style="flex-grow: 5;" name="messaggio">msg</textarea>
         </div>
         <br>
-        <div class="g-recaptcha" name="g-recaptcha-response" data-sitekey="6Le39NIUAAAAAKEvhEn0hGf44mBq_El4q-9xAsqk"></div>
+        <div style="width: 100%; display: flex; justify-content: flex-end;">
+            <div class="g-recaptcha" data-sitekey="6Le39NIUAAAAAKEvhEn0hGf44mBq_El4q-9xAsqk"></div>
+        </div>
         <br>
         <div style="width: 100%; display: flex; justify-content: flex-end;">
             <div id="submit">Scrivimi!</div>
