--- a/public/index.html
+++ b/public/index.html
@@ -277,7 +277,7 @@
             var messaggio = $('[name="messaggio"]').val();
 
             $.post({
-                url: 'https://https://php-guidosangiovanni-mailer.herokuapp.com/',
+                url: 'https://php-guidosangiovanni-mailer.herokuapp.com/',
                 contentType: 'application/json',
                 dataType: 'json',
                 data: {
