--- a/public/index.html
+++ b/public/index.html
@@ -71,17 +71,17 @@
         <form id="contactForm">
             <div class="row">
                 <strong style="flex-grow: 2;">Nome</strong style="flex-grow: 2;">
-                <input style="flex-grow: 5;" type="text" name="nome" value="guido"/>
+                <input style="flex-grow: 5;" type="text" name="nome" value=""/>
             </div>
             <br>
             <div class="row">
                 <strong style="flex-grow: 2;">Email</strong>
-                <input style="flex-grow: 5;" type="email" name="email" value="sangiovanni.guido@gmail.com" />
+                <input style="flex-grow: 5;" type="email" name="email" value="" />
             </div>
             <br>
             <div class="row">
                 <strong style="flex-grow: 2;">Messaggio</strong>
-                <textarea style="flex-grow: 5;" name="messaggio">msg</textarea>
+                <textarea style="flex-grow: 5;" name="messaggio"></textarea>
             </div>
             <br>
             <div style="width: 100%; display: flex; justify-content: flex-end;">
@@ -132,12 +132,14 @@
     }
 
     input {
+        padding: 3pt;
         background-color: #96949D;
         color: white;
         line-height: 22pt;
     }
 
     textarea {
+        padding: 3pt;
         background-color: #96949D;
         color: white;
         line-height: 22pt;
