--- a/public/index.html
+++ b/public/index.html
@@ -239,7 +239,7 @@
         width: 200px;
         height: 90px;
         background-color: #bbffbb;
-        display: none;
+        visibility: hidden;
     }
 
     /* ANIMATIONS */
