success div position fixed

--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
     }
 
     #successDiv {
-        position: absolute;
+        position: fixed;
         text-align: center;
         padding: 5pt;
         top: 10pt;
